--- a/Blockchain2/Blockchain2.csproj
+++ b/Blockchain2/Blockchain2.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="morelinq" Version="3.3.2" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="WebSocketSharp-netstandard" Version="1.0.1" />
     </ItemGroup>
